# fastasplit

./: .gitignore  CHANGELOG.md  README.md  changelog.txt  fastasplit.py  setup.cfg
Data/: bedbug.fa
fastasplit/: fastasplit.py
src/fastasplit/: _version.py  fastasplit.py  version.py
