[metadata]
name = fastasplit
version = attr: _version.py.__version__
author = Josh Tompkin
author_email = tompkinjo@gmail.com
description = Split fasta files
url = https://github.com/jtompkin/fastasplit
license = GPLv3
classifiers = 
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    fastasplit = fastasplit:main