[metadata]
name = fastasplit
version = attr: fastasplit._version.py.__version__
author = Josh Tompkin
author_email = tompkinjo@gmail.com
description = Split fasta files
url = https://github.com/jtompkin/fastasplit
license = GPLv3
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    fastasplit = fastasplit:main